--- a/code/src/app/components/travel-modes/list-one-travel/list-one-travel.component.css
+++ b/code/src/app/components/travel-modes/list-one-travel/list-one-travel.component.css
@@ -2,8 +2,9 @@ h1
 {
     font-size: 5rem;
     text-align: center;
-    margin: 5rem 0;
-    color: var(--color-secondary);
+    margin: 4rem 0 3rem 0;
+    color: var(--text-brand-colors);
+    font-weight: 600;
 }
 h2{
     font-size: 3rem;
